resolved coaching.html overlapping data issue

--- a/style.css
+++ b/style.css
@@ -179,6 +179,11 @@ strong {
   #styleCoaches {
     display: block;
   }
+
+  #lauren--image {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media only all and (max-width: 768px) {
